--- a/set-vision-web/package.json
+++ b/set-vision-web/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev:api": "python dev_run_backend.py",
+    "dev:all": "concurrently -k \"npm:dev\" \"npm:dev:api\""
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -19,6 +18,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
